# MetalBox

./: .gitignore  Dockerfile  README.md  build.sh  entrypoint.sh  metalbox-test.yml  pyproject.toml
.github/workflows/: release.yml
dashboard/: go.mod  main.go  tui.go
dashboard/static/: index.html
examples/tiny-llm/: pyproject.toml  server.py
metalbox/: __init__.py  cli.py  config.py  guard.py  healthcheck.py  logger.py  metal.py  supervisor.py  taskpolicy.py
