[project]
name = "metalbox"
version = "0.1.0"
description = "Lightweight process containerization for macOS Apple Silicon with Metal/MLX support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
]

[project.scripts]
metalbox = "metalbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
