[project]
name = "metalbox"
version = "0.4.2"
description = "Lightweight process containerization for macOS Apple Silicon with Metal/MLX support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ronald Wilson", email = "ronxldwilson@gmail.com" },
]
keywords = ["macos", "apple-silicon", "metal", "mlx", "container", "process-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/ronxldwilson/MetalBox"
Repository = "https://github.com/ronxldwilson/MetalBox"
Issues = "https://github.com/ronxldwilson/MetalBox/issues"

[project.scripts]
metalbox = "metalbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metalbox"]

[tool.hatch.build.targets.wheel.force-include]
"metalbox/bin/metalbox-dashboard" = "metalbox/bin/metalbox-dashboard"
